<resources>
    <string name="app_name">Safraa Bus</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_249">+249</string>
    <string name="fill_up_the_following_to_complete_your_profile">Fill up the following to complete your profile</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="destination">Destination</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="price_in_sdgs">%1$s SDG</string>
    <string name="formatted_date">%1$d/%2$d/%3$d</string>
    <string name="formatted_time">%1$02d:%2$02d</string>
    <string name="day_capitalized">DAY</string>
    <string name="time_capitalized">TIME</string>
    <string name="price_capitalized">PRICE</string>
    <string name="total_seats_capitalized">TOTAL SEATS</string>
    <string name="reserved_capitalized">RESERVED</string>
    <string name="seat">SEAT</string>
    <string name="name_capitalized">NAME</string>
    <string name="current_trips">Current Trips</string>
    <string name="last_trips">Last Trips</string>
    <string name="settings">Settings</string>
    <string name="trip_details">Trip details</string>
    <string name="seat_details">Seats Details</string>
    <string name="new_trip">New Trip</string>
    <string name="select_seats">Select Seats</string>
    <string name="select_the_seats_available_to_book">Select the seats available to book</string>
    <string name="seats">Seats</string>
    <string name="add_trip">Add Trip</string>
    <string name="select_all">Select All</string>
    <string name="logout">Logout</string>
    <string name="rihla_version" translatable="false">Rihla Bus Version %s</string>
    <string name="personal_info">Personal Info</string>
    <string name="company_info">Company Info</string>
    <string name="verification">Verification</string>
    <string name="please_enter_the_verification_code">Please enter the verification code</string>
    <string name="code">Code</string>
    <string name="terms_and_conditions_label">By signing up you agree to the terms and conditions of Safraa</string>
    <string name="no_current_trips">No current trips, add a new trip</string>
    <string name="no_last_trips">No Previous trips, add a new trip</string>
    <string name="unbooked_seat">Unbooked Seat</string>
    <string name="booked_seat">Booked Seat</string>
    <string name="there_are_no_trips">There are no trips</string>
    <string name="all_seats">All Seats</string>
    <string name="not_booked">Not booked</string>
    <string name="trip_added">Trip added successfully</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="required">Required</string>
    <string name="reserve">Reserve</string>
    <string name="pre_book">Pre Book</string>
    <string name="payment_confirmation">Payment Confirmation</string>
    <string name="paid">Paid</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="payment_not_made">Not Paid</string>
    <string name="payment_not_made_confirmation">I confirm not receiving the transaction</string>
    <string name="payment_details">Payment Details</string>
    <string name="confirm_payment_not_paid_question">Are you sure this payment isn\'t received?</string>
    <string name="payment_confirmed">Payment confirmed</string>
    <string name="seat_reserved">Seat reserved</string>
    <string name="seat_reservation_cancelled">Seat reservation cancelled</string>
    <!--  Error Messages  -->
    <string name="couldnt_find_user">Couldn\'t find user</string>
    <string name="failed_to_check_registration">Failed to check registration</string>
    <string name="login_failed">Login failed, please try again</string>
    <string name="registration_failed">Registration failed, please try again</string>
    <string name="add_company_failed">Failed to save company, please try again</string>
    <string name="add_trip_failed">Failed to add trip, please try again</string>
    <string name="loading_companies_failed">Failed to load companies, please check your connection</string>
    <string name="loading_destinations_failed">Failed to load destinations, please check your connection</string>
    <string name="loading_current_trips_failed">Failed to load current trips, please check your connection</string>
    <string name="loading_last_trips_failed">Failed to load last trips, please check your connection</string>
    <string name="loading_trip_failed">Failed to load trip, please check your connection</string>
    <string name="failed_to_update_seat">Failed to update seat, please try again</string>
    <string name="failed_to_resolve_app_version">Failed to resolve app version, check your connection</string>
    <string name="update_to_continue">Please update your App to continue</string>
    <string name="verifying_with_company">Please wait while we verify you with your company</string>
    <string name="no_network">No network, check your connection</string>
    <string name="name_of_passenger">Name of passenger</string>
    <string name="couldnt_confirm_payment">Couldn\'t confirm payment</string>
    <string name="update">Update</string>
    <string name="from">From</string>
    <string name="to">To</string>
</resources>