<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="seat"
            type="com.dinder.rihlabus.data.model.Seat" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_details"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/linearLayout8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <TextView
                android:id="@+id/seatDetailPassengerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@{seat.passenger != null ? seat.passenger : seat.isAvailable ? @string/unbooked_seat : @string/booked_seat }'
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/linearLayout8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout6"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <TextView
                android:id="@+id/paymentAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@{seat.paidAmount != null ? seat.paidAmount.toString() : "Error" }'
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paid_amount"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/paymentConfirmedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/green"
            android:text="@string/payment_confirmation"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/paymentDeclinedButton"
            app:layout_constraintEnd_toStartOf="@id/paymentDeclinedButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

        <Button
            android:id="@+id/paymentDeclinedButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/payment_not_made"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/paymentConfirmedButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/paymentConfirmedButton"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>